Add pragmatic engineer

--- a/config/sources.yaml
+++ b/config/sources.yaml
@@ -5,3 +5,4 @@
 - url: 'https://icebergrosario.substack.com/feed'
 # - url: 'https://fabiensanglard.net/rss.xml'
 - url: 'https://daniel.haxx.se/blog/feed/'
+- url: 'https://newsletter.pragmaticengineer.com/feed'
