--- a/config/news.yaml
+++ b/config/news.yaml
@@ -1,2 +1,3 @@
 - url: 'https://elciudadanoweb.com/feed/'
 - url: 'https://www.clarin.com/rss/lo-ultimo/'
+- url: 'https://cenital.com/secciones/newsletters/off-the-record/feed/'
