--- a/config/sources.yaml
+++ b/config/sources.yaml
@@ -6,3 +6,5 @@
 # - url: 'https://fabiensanglard.net/rss.xml'
 - url: 'https://daniel.haxx.se/blog/feed/'
 - url: 'https://newsletter.pragmaticengineer.com/feed'
+# - url: 'https://www.inkandswitch.com/index.xml'
+- url: 'https://tldr.tech/api/rss/tech'
