Add netflix tech blog

--- a/config/sources.yaml
+++ b/config/sources.yaml
@@ -8,3 +8,4 @@
 - url: 'https://newsletter.pragmaticengineer.com/feed'
 # - url: 'https://www.inkandswitch.com/index.xml'
 - url: 'https://tldr.tech/api/rss/tech'
+- url: 'https://netflixtechblog.com/feed'
