--- a/config/sources.yaml
+++ b/config/sources.yaml
@@ -9,4 +9,4 @@
 # - url: 'https://www.inkandswitch.com/index.xml'
 - url: 'https://tldr.tech/api/rss/tech'
 # - url: 'https://netflixtechblog.com/feed'
-- url: 'https://www.421.news/rss'
+- url: 'https://www.421.news/rss/'
