--- a/config/sources.yaml
+++ b/config/sources.yaml
@@ -10,3 +10,4 @@
 - url: 'https://tldr.tech/api/rss/tech'
 # - url: 'https://netflixtechblog.com/feed'
 - url: 'https://www.421.news/rss/'
+- url: 'https://alejandrogalliano.substack.com/feed'
